fix: download price loader alignment

--- a/src/components/Asset/AssetActions/Download.module.css
+++ b/src/components/Asset/AssetActions/Download.module.css
@@ -9,6 +9,10 @@
   width: auto;
 }
 
+.priceWrapper > div {
+  justify-content: flex-start;
+}
+
 .filewrapper {
   flex-shrink: 0;
 }
